NOD-843: [FDR] Gestire i file verso SFTP Nexi
